<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DaftarKonsultasi.DaftarKonsul_konfirm">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/head">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/gradStop">

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_arrow_back_black_32dp"
                android:drawablePadding="5dp"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@string/font_medium"
                android:paddingLeft="6dp"
                android:layout_gravity="center"
                android:text="Daftar Konsultasi"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#f2f2f2"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <android.support.v7.widget.CardView
                android:id="@+id/head_pilihJadwal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:alpha="0.6"
                    android:fontFamily="@string/font_medium"
                    android:text="Pilih Jadwal"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_weight="1.2"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                android:layout_margin="2dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="@string/font_medium"
                    android:text="Konfirmasi Daftar"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:alpha="0.6"
                    android:layout_gravity="center"
                    android:fontFamily="@string/font_medium"
                    android:text="Selesai"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:id="@+id/view2"
                android:shape="ring"
                android:background="#ffffff"
                app:cardCornerRadius="20dp"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/menu_icon_user"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="10dp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/namaKonfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@string/font_light"
                    android:text="Muhamad Ady Pamungkas"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/namaLayanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@string/font_light"
                    android:text="Rekomendasi Sekolah"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="0.7"
                        android:fontFamily="@string/font_light"
                        android:text="Psikolog : "
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/psikolog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1.3"
                        android:fontFamily="@string/font_light"
                        android:text="Muhamad Ady"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="2">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="0.8"
                        android:fontFamily="@string/font_light"
                        android:text="Tanggal "
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/tanggal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1.2"
                        android:textAlignment="center"
                        android:fontFamily="@string/font_light"
                        android:text="22 Mei 2018"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/sesi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@string/font_light"
                    android:text="Sesi 3 (08:00 - 10:00)"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="0.5"
                        android:fontFamily="@string/font_light"
                        android:text="Harga :"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/hargaLayanan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1.3"
                        android:fontFamily="@string/font_light"
                        android:text="Mulai Rp 250.000"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@string/font_bold"
                    android:text="Menunggu Konfirmasi Psikolog"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@string/font_light"
                    android:text="Keluhan"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/keluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@string/font_light"
                    android:text="Menunggu Konfirmasi Psikolog"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_editKonsul"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="@color/gradStop"
                android:fontFamily="sans-serif-light"
                android:paddingHorizontal="15dp"
                android:text="Reset Konsultasi"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/bt_simpanKonsul"
                android:layout_marginHorizontal="15dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:paddingHorizontal="15dp"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:backgroundTint="@color/gradStart"
                android:background="@drawable/btn_bg"
                android:text="Konfirmasi"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>